--- a/elements/carousel.module.scss
+++ b/elements/carousel.module.scss
@@ -1,35 +1,35 @@
-.thumb-nav {
-    position: relative;
-
-    .caption {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        overflow-y: auto;
-        overflow-x: hidden;
-        position: absolute;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-
-        &.cap-bckg {
-            background: var(--caption-background);
-        }
-
-        //add
-        top: 0;
-        color: #fff;
-    }
-}
-
-.root {
+.thumb-gallery {
     padding: 0px 50px;
     width: 100%;
 
     .wrapper {
         height: 100%;
         width: 100%;
+
+        .thumb-nav {
+            position: relative;
+
+            .caption {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow-y: auto;
+                overflow-x: hidden;
+                position: absolute;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+
+                &.cap-bckg {
+                    background: var(--caption-background);
+                }
+
+                //add
+                top: 0;
+                color: #fff;
+            }
+        }
     }
 }
